fix: missing border radius variables

--- a/src/components/bubble/scss/variables.scss
+++ b/src/components/bubble/scss/variables.scss
@@ -1,7 +1,7 @@
 .bubble {
     --background: var(--background-default);
     --background-default: var(--color-border-400);
-    --border-radius: var(--border-radius-circle);
+    --border-radius: 100%;
     --height: var(--size);
     --margin-horizontal: var(--size-100);
     --size: 6px;
@@ -10,6 +10,7 @@
 
     &--bottom,
     &--top {
+
         &-left,
         &-right {
             --position-horizontal: calc(var(--size) / -2);
